poll/client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-client
  labels:
    app: poll-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll-client
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: poll-client
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org
              weight: 1

      containers:
        - image: ghcr.io/traptitech/real-time-poll-client:1.0.2
          name: poll-client
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: "200m"
              memory: "200Mi"
            requests:
              cpu: "50m"
              memory: "50Mi"
      restartPolicy: Always
