poll/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-client
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: poll-client
